EKSproject/k8s/app.yaml
#Application Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
  labels:
    app: vproapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vproapp
  template:
    metadata:
      labels:
        app: vproapp
    spec:
      containers:
      - name: vproapp
        image: vprocontainers/vprofileapp   #Uses Docker image vprofileapp
        imagePullPolicy: Always
        ports:
        - name: vproapp-port
          containerPort: 8080
      initContainers:       #Init Containers (Dependency Check Mechanism: Ensures backend services are ready before app starts)
        - name: init-mydb
          image: busybox
          command: ['sh', '-c', 'until nslookup vprodb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mydb; sleep 2; done;']
        - name: init-memcache
          image: busybox
          command: ['sh', '-c', 'until nslookup vprocache01.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mydb; sleep 2; done;']
        - name: init-rabbitmq
          image: busybox
          command: ['sh', '-c', 'until nslookup vprormq01.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mydb; sleep 2; done;']

---
#Application Service
# =========================================================
# vProfile Application Service (Internal Access)
# =========================================================
# ClusterIP Service used for internal communication
# between Ingress and Application Pods
# =========================================================
apiVersion: v1
kind: Service
metadata:
  name: vproapp-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: vproapp
  type: ClusterIP
