EKSproject/k8s/db.yaml
#MySQL Database Deployment
# =========================================================
#  vProfile MySQL Database Deployment
# =========================================================
# Includes:
# - Persistent Volume (PVC) for data storage
# - Init container for cleanup
# - MySQL container
# - Internal ClusterIP Service
# =========================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  labels:
    app: vprodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprodb
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      initContainers:    #Removes lost+found directory before MySQL starts.Ensures clean volume initialization
        - name: busybox
          image: busybox:latest
          args: ["rm", "-rf", "/var/lib/mysql/lost+found"]
          volumeMounts:
            - name: vpro-db-data
              mountPath: /var/lib/mysql
      containers:
        - name: vprodb
          image: vprocontainers/vprofiledb
          volumeMounts:
            - name: vpro-db-data
              mountPath: /var/lib/mysql
          ports:
            - name: vprodb-port
              containerPort: 3306
      volumes:        #Persistent Storage (PVC).Stores MySQL data persistently.Prevents data loss when pod restarts
        - name: vpro-db-data
          persistentVolumeClaim:
            claimName: db-pv-claim

---
#db Internal Service
# =========================================================
#  vProfile Database Service (Internal Access Only)
# =========================================================
# Type: ClusterIP
# Used only inside Kubernetes cluster
# =========================================================
apiVersion: v1
kind: Service
metadata:
  name: vprodb
spec:
  ports:
  - port: 3306
    targetPort: vprodb-port
    protocol: TCP
  selector:
    app: vprodb
  type: ClusterIP
