EKSproject/k8s/ingress.yaml
# =========================================================
# 🌐 vProfile Ingress Controller (External Access Layer)
# =========================================================
# Purpose:
# - Exposes vProfile application to the internet
# - Uses NGINX Ingress Controller
# - Routes traffic from domain to backend service
# - Supports path-based routing (/)
# =========================================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpro-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    #alb.ingress.kubernetes.io/scheme: internet-facing  #Only use these if you switch to AWS ALB Ingress Controller, not NGINX.
    #alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: nginx
  rules:
  - host: vprofile.ehmutyam.xyz   #replace this host with your domaain name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vproapp-service
            port:
              number: 8080
